@@ -17,6 +17,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****  Fix tracing of package variables and real arrays.
 
+****  Fix missing coverage line on else-if, bug727. [Sharad Bagri]
+
 ****  Fix Mac OS-X test issues. [Holger Waechtler]
 
 ****  Fix C++-2011 warnings.
